fix spinner so its not so ugly and out of place

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1979,7 +1979,7 @@ tr:hover, .table-hover>tbody>tr:hover {
 }
 
 .page-on-load {
-    background: #fefefe;
+    background: #2a2d2f;
 }
 
 .page-on-load .page-container,.page-on-load .page-footer,.page-on-load .page-header,.page-on-load .page-prefooter,.page-on-load>.clearfix {
